ipc/ipdl/test/ipdl/error/trans_WrongName3.ipdl
sync protocol trans_WrongName3 {

parent:
    sync Msg();

state S1:
    answer Msg goto S1;

};
